Confirgure proper redirects

--- a/firebase.json
+++ b/firebase.json
@@ -13,6 +13,14 @@
 		],
 		"rewrites": [
 			{
+				"source": "/admin/home",
+				"destination": "/admin/adminHome.html"
+			},
+			{
+				"source": "/admin",
+				"destination": "/admin/admin.html"
+			},
+			{
 				"source": "**",
 				"destination": "/redirect.html"
 			}
