Updated sign in flow with top bar

--- a/firebase.json
+++ b/firebase.json
@@ -13,6 +13,10 @@
 		],
 		"rewrites": [
 			{
+				"source": "/",
+				"destination": "/index.html"
+			},
+			{
 				"source": "/login",
 				"destination": "/auth/login.html"
 			},
