--- a/firebase.json
+++ b/firebase.json
@@ -21,12 +21,16 @@
 				"destination": "/auth/login.html"
 			},
 			{
+				"source": "/admin",
+				"destination": "/admin/adminVerification.html"
+			},
+			{
 				"source": "/admin/home",
 				"destination": "/admin/admin.html"
 			},
 			{
-				"source": "/admin",
-				"destination": "/admin/adminVerification.html"
+				"source": "/admin/adminManagement",
+				"destination": "/admin/adminManagement/adminManagement.html"
 			},
 			{
 				"source": "**",
