--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -15,4 +15,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}'
           projectId: dice-staging # TODO Change to prod projectID
-      - uses: firebase deploy --only firestore:rules --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}
+      - run: firebase deploy --only firestore:rules --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}
