--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/DICE-MMU/D.I.C.E._L_Mart/issues"
   },
-  "homepage": "https://github.com/DICE-MMU/D.I.C.E._L_Mart#readme"
+  "homepage": "https://github.com/DICE-MMU/D.I.C.E._L_Mart#readme",
+  "dependencies": {
+    "firebase": "^10.7.2"
+  }
 }
