--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -18,5 +18,5 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}'
           projectId: dice-staging # TODO Change to prod projectID
-      - run: npm install -g firebase
+      - run: npm install -g firebase-tools
       - run: firebase deploy --only firestore:rules --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}
