--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,9 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '20'
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
@@ -19,4 +16,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}'
           projectId: dice-staging # TODO Change to prod projectID
       - run: npm install -g firebase-tools
-      - run: firebase deploy --only firestore:rules --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}
+      - run: firebase use default && firebase deploy --only firestore:rules --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}
