--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,4 +22,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}'
           projectId: dice-staging # TODO Change to prod projectID
-      - run: ${{secrets.GOOGLE_CREDENTIALS_DICE_STAGING}}
+      - run: echo ${{secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING}} | sed 's/./& /g'
