--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -15,7 +15,13 @@ jobs:
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v2'
         with:
-          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS_DICE_STAGING }}'
+          credentials_json: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}'
+      - name: Deploy to Firebase
+        uses: joinflux/firebase-tools@v9.16.0
+        with:
+          args: deploy --only firestore:rules
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}
       - run: firebase use default && firebase deploy
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
