--- a/.github/workflows/firebase-merge-staging.yml
+++ b/.github/workflows/firebase-merge-staging.yml
@@ -8,7 +8,7 @@ name: Deploy to Firebase Hosting on merge to staging
       - staging
 jobs:
   build_and_deploy:
-    name: Build and Deploy
+    name: Build and Deploy (DICE-STAGING)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,7 +20,7 @@ jobs:
           channelId: live
           projectId: dice-staging
   deploy-firestore-rules:
-    name: Deploy Firestore Rules
+    name: Deploy Firestore Rules (DICE-STAGING)
     runs-on: ubuntu-latest
     needs: build_and_deploy
     steps:
