--- a/.github/workflows/firebase-merge.yml
+++ b/.github/workflows/firebase-merge.yml
@@ -8,6 +8,7 @@ name: Deploy to Firebase Hosting on merge to main
       - main
 jobs:
   build_and_deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
