--- a/.github/workflows/firebase-pr.yml
+++ b/.github/workflows/firebase-pr.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on PR
 'on': pull_request
 jobs:
   build_and_preview:
-    name: Build and Preview
+    name: Build and Preview (DICE-STAGING)
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
     steps:
@@ -17,7 +17,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DICE_STAGING }}'
           projectId: dice-staging
   deploy-firestore-rules:
-    name: Deploy Firestore Rules
+    name: Deploy Firestore Rules (DICE-STAGING)
     runs-on: ubuntu-latest
     needs: build_and_preview
     steps:
